--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ h1, h2, h3, h4, h5, h6 {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/back.jpg) no-repeat center top;
+	background: url(imgstringart/back.jpg) no-repeat center top;
 	margin-top: 0px;
 	padding-top:120px;
 	text-align:center;
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6 {
 	height: 60px;
 	margin: 0 auto 45px;
 	border-top: 1px solid #000;
-	background: url(../img/name-label.png) center bottom no-repeat;
+	background: url(imgstringart/name-label.png) center bottom no-repeat;
 	background-size: 35px 35px;
 }
 
@@ -302,7 +302,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 73px;
 	height: 17px;
 	margin: 38px 0 38px;
-	background: url(../img/name-zig.png) 0 0 no-repeat;
+	background: url(imgstringart/name-zig.png) 0 0 no-repeat;
 	background-size: 73px 17px;
 }
 
@@ -322,8 +322,7 @@ h1, h2, h3, h4, h5, h6 {
 	position: relative;
 }
 .about {
-	background-image: url(../img/about-sep.jpg);
-}
+	background-image: url(imgstringart/about-sep.jpg); /* коли прикрипляв то не йшло поміняв адресу уважно коли все правильно то має висвічуватися фото*/
 
 /* Portfolio Wrap Section */
 #portfoliowrap {
@@ -361,7 +360,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .portfolio {
-	background-image: url(../img/portfolio-sep.jpg);
+	background-image: url(imgstringart/portfolio-sep.jpg);
 }
 
 /* Service Wrap */
@@ -422,7 +421,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .contact {
-	background-image: url(../img/contact-sep.jpg);
+	background-image: url(imgstringart/contact-sep.jpg);
 }
 
 #contactwrap label {
@@ -457,7 +456,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .project:hover .photo-wrapper {
   background-color: #2f2f2f;
-	background-image:url(../img/zoom.png);
+	background-image:url(imgstringart/zoom.png);
 	background-repeat:no-repeat;
 	background-position:center;
 	top: 0;
