--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ GRID - сетка для того якщо під час здвіга екран
 ___________________________________________*/
 
 
-*{
+* {
    box-sizing: border-box; 
 }
 
@@ -83,7 +83,7 @@ background: white;
     font-size: 58px;
     width: 60px;
     height: 50px;
-    margin left: -30px;
+    margin-left: -30px;
     
     position:absolute;
     bottom: 50px;
@@ -120,8 +120,8 @@ max-width: 100%;
 
 .portfolio-item__title {
     font-size:24px;
-    line-height: :normal;
-    margin-bottom: :5px;
+    line-height: normal;
+    margin-bottom: 5px;
 }
    
 /*для того щоб силки не були сині */
@@ -134,7 +134,7 @@ max-width: 100%;
 
 .portfolio-item__title a:hover /* поведынка коли ми наводим курсор на силку*/ {
     color: #0052C2;
-    border-color:rgba (0, 82, 194,0.3);  
+    border-color: rgba(0,82,194,0.3);  
 }
 
 .portfolio-item__title p{
@@ -325,7 +325,7 @@ padding-bottom: 465px;  /*у мене футер 400пкс*/
     font-size: 80px;
     width: 60px;
     height: 50px;
-    margin left: -30px;
+    margin-left: -30px;
     
    
     bottom: 50px;
